@@ -53,7 +53,7 @@
 		<beans:constructor-arg value="${ldap.domain.url}"/>
 	</beans:bean>
 	
-	<beans:bean id="ldapContext" class="com.pennanttech.framework.security.ldap.LdapContext" scope="prototype"/>
+	<beans:bean id="ldapContext" class="com.pennanttech.pennapps.core.security.LdapContext" scope="prototype"/>
 		
 	<beans:bean id="daoAuthenticationProvider" class="org.springframework.security.authentication.dao.DaoAuthenticationProvider">
 		<beans:property name="passwordEncoder" ref="passwordEncoder"/>
